# tutorlolv2

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  node_worker.mjs  sample.json  tests.rs
build_script/: Cargo.toml
build_script/src/: main.rs
build_script/src/scripts/: export_champions.rs  export_items.rs  export_runes.rs  utils.rs
internal_comptime/: Cargo.toml
internal_comptime/src/: cache.rs  lib.rs
internal_comptime/src/data/: mod.rs
tutorlolv2_bench/: Cargo.toml
tutorlolv2_bench/src/: main.rs
tutorlolv2_build/: Cargo.toml
tutorlolv2_build/src/: _lib.rs  lib.rs  main.rs
tutorlolv2_build/src/scripts/: champions.rs  export_champions.rs  export_items.rs  export_runes.rs  items.rs  mod.rs  model.rs  runes.rs  utils.rs
tutorlolv2_cli/: Cargo.toml
tutorlolv2_cli/src/: lib.rs  main.rs
tutorlolv2_dev/: Cargo.toml
tutorlolv2_dev/src/: init.rs  lib.rs
tutorlolv2_dev/src/generators/: aatrox.rs  ahri.rs  akali.rs  akshan.rs  alistar.rs  ambessa.rs  amumu.rs  anivia.rs  annie.rs  aphelios.rs  ashe.rs  aurelionsol.rs  aurora.rs  azir.rs  bard.rs  belveth.rs  blitzcrank.rs  brand.rs  braum.rs  briar.rs  caitlyn.rs  camille.rs  cassiopeia.rs  chogath.rs  corki.rs  darius.rs  diana.rs  draven.rs  drmundo.rs  ekko.rs  elise.rs  evelynn.rs  ezreal.rs  fiddlesticks.rs  fiora.rs  fizz.rs  galio.rs  gangplank.rs  garen.rs  gen_utils.rs  (+133 more)
tutorlolv2_dev/src/generators/gen_champions/: Zaahen.rs  __decl.rs  _zaahen.rs  aatrox.rs  ahri.rs  akali.rs  akshan.rs  alistar.rs  ambessa.rs  amumu.rs  anivia.rs  annie.rs  aphelios.rs  ashe.rs  aurelionsol.rs  aurora.rs  azir.rs  bard.rs  belveth.rs  blitzcrank.rs  brand.rs  braum.rs  briar.rs  caitlyn.rs  camille.rs  cassiopeia.rs  chogath.rs  corki.rs  darius.rs  diana.rs  draven.rs  drmundo.rs  ekko.rs  elise.rs  evelynn.rs  ezreal.rs  fiddlesticks.rs  fiora.rs  fizz.rs  galio.rs  (+136 more)
tutorlolv2_dev/src/generators/gen_decl/: decl_champions.rs  decl_items.rs  mod.rs
tutorlolv2_dev/src/generators/gen_factories/: fac_champions.rs  fac_items.rs  mod.rs  wiki_champions.rs  wiki_items.rs  wiki_runes.rs
tutorlolv2_dev/src/generators/gen_items/: __decl.rs  abyssal_mask.rs  abyssal_mask_arena.rs  abyssal_mask_u_32.rs  actualizer.rs  actualizer_arena.rs  adaptive_helm.rs  adaptive_helm_arena.rs  aegis_of_the_legion.rs  aegis_of_the_legion_arena.rs  aegisofthe_legion.rs  aether_wisp.rs  amplifying_tome.rs  anathemas_chains.rs  anathemas_chains_arena.rs  ani_mines.rs  anima_echo.rs  animapocalypse.rs  anti_shark_sea_mine.rs  anti_tower_socks.rs  anvil_voucher.rs  anvil_voucher_arena.rs  arcane_sweeper.rs  arcane_sweeper_trinket.rs  archangels_staff.rs  archangels_staff_arena.rs  archangels_staff_u_32.rs  ardent_censer.rs  ardent_censer_arena.rs  ardent_censer_u_32.rs  armored_advance.rs  atmas_reckoning.rs  atmas_reckoning_arena.rs  atmas_reckoning_u_66.rs  axiom_arc.rs  axiom_arc_arena.rs  b_f_sword.rs  bamis_cinder.rs  bandle_juice_of_haste.rs  bandle_juice_of_power.rs  (+762 more)
tutorlolv2_dev/src/generators/gen_runes/: __decl.rs  absolute_focus.rs  absorb_life.rs  aftershock.rs  approach_velocity.rs  arcane_comet.rs  axiom_arcanist.rs  biscuit_delivery.rs  bone_plating.rs  cash_back.rs  celerity.rs  celestial_body.rs  cheap_shot.rs  chrysalis.rs  conditioning.rs  conqueror.rs  cosmic_insight.rs  coup_de_grace.rs  cut_down.rs  dark_harvest.rs  deathfire_touch.rs  deep_ward.rs  demolish.rs  electrocute.rs  eyeball_collection.rs  first_strike.rs  fleet_footwork.rs  font_of_life.rs  futures_market.rs  gathering_storm.rs  ghost_poro.rs  glacial_augment.rs  grasp_of_the_undying.rs  grisly_mementos.rs  (+51 more)
tutorlolv2_dev/src/generators_v2/: aatrox.rs  ahri.rs  akali.rs  akshan.rs  alistar.rs  ambessa.rs  amumu.rs  anivia.rs  annie.rs  aphelios.rs  ashe.rs  aurelionsol.rs  aurora.rs  azir.rs  bard.rs  belveth.rs  blitzcrank.rs  brand.rs  braum.rs  briar.rs  caitlyn.rs  camille.rs  cassiopeia.rs  chogath.rs  corki.rs  darius.rs  diana.rs  draven.rs  drmundo.rs  ekko.rs  elise.rs  evelynn.rs  ezreal.rs  fiddlesticks.rs  fiora.rs  fizz.rs  galio.rs  gangplank.rs  garen.rs  gen_utils.rs  (+133 more)
tutorlolv2_dev/src/model/: champions.rs  items.rs  mod.rs  riot.rs
tutorlolv2_dev/src/setup/: avif_converter.rs  cache.rs  client.rs  ext.rs  mod.rs  schedule.rs  scraper.rs  update.rs
tutorlolv2_dev/src/wiki/: mod.rs  model.rs  node.rs  parser.rs
tutorlolv2_exports/: Cargo.toml  export_code.rs
tutorlolv2_exports/assets/: champions.css  exports.rs
tutorlolv2_exports/src/: export_code.rs  exports.rs  lib.rs
tutorlolv2_exports/src/html_gen/: champions.rs  html.rs  items.rs  mod.rs  runes.rs
tutorlolv2_gen/: Cargo.toml
tutorlolv2_gen/src/: bitarray.rs  bitset.rs  cache.rs  data.rs  enums.rs  eval.rs  lib.rs
tutorlolv2_gen/src/data/: champions.rs  items.rs  mod.rs  runes.rs
tutorlolv2_html/: Cargo.toml
tutorlolv2_html/src/: champions.rs  html.rs  items.rs  lib.rs  main.rs  runes.rs  style.css
tutorlolv2_math/: Cargo.toml
tutorlolv2_math/src/: bitarray.rs  calc.rs  calculator.rs  const_eval.rs  const_impl.rs  const_model.rs  helpers.rs  lib.rs  math_test.rs  model.rs  realtime.rs  riot.rs  rt.rs
tutorlolv2_math/src/__v2/: formulas.rs  helpers.rs  helpers_arena.rs  mod.rs  model.rs  model_arena.rs  riot.rs  rt.rs  rt_arena.rs  rt_stack.rs
tutorlolv2_math/src/math/: calculator.rs  helpers.rs  mod.rs  realtime.rs  riot_formulas.rs
tutorlolv2_math/src/model/: base.rs  calculator.rs  functions.rs  mod.rs  realtime.rs  riot.rs
tutorlolv2_model/: Cargo.toml
tutorlolv2_model/src/: lib.rs  recv.rs  send.rs
tutorlolv2_server/: Cargo.toml
tutorlolv2_server/src/: lib.rs  main.rs
tutorlolv2_server/src/server/: embed.rs  games.rs  mod.rs
tutorlolv2_types/: Cargo.toml
tutorlolv2_types/src/: ability_name.rs  lib.rs
tutorlolv2_wiki/: Cargo.toml
tutorlolv2_wiki/src/: client.rs  formula.rs  lib.rs  parser.rs  render.rs  runes.rs
tutorlolv2_wiki/src/champions/: _abilities.rs  _abilities2.rs  abilities.rs  full.rs  mod.rs  template.rs
tutorlolv2_wiki/src/items/: item_parser.rs  mod.rs
tutorlolv2_wiki/src/runes/: mod.rs
(+10169 files in other folders)
