[package]
name = "tutorlolv2"
version = "0.5.5"
edition = "2024"
authors = ["Luiz Gustavo Santana Dias Gomes"]
repository = "https://github.com/LuizGomes56/tutorlolv2"
description = "League of Legends static library that evaluates damages of abilities, passives, items, and runes"

[dev-dependencies]
serde_json = "1.0.145"
bincode = "2.0.1"
tutorlolv2 = { path = "." }

[workspace]
members = [
    "tutorlolv2_model",
    # "tutorlolv2_build",
    # "tutorlolv2_dev",
    # "tutorlolv2_fmt",
    # "tutorlolv2_gen",
    # "tutorlolv2_html",
    # "tutorlolv2_macros",
    # "tutorlolv2_server",
    # "tutorlolv2_types",
]

[dependencies]
tutorlolv2_model = { path = "tutorlolv2_model", features = ["recv"] }
tutorlolv2_gen = { path = "tutorlolv2_gen", features = ["eval"] }
const_sized_bit_set = "0.3.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
bincode = { version = "2.0.1", default-features = false, features = ["derive"] }
