[package]
name = "build_script"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false

[dependencies]
tokio = { version = "1.47", features = ["full"] }
shared_types = { path = "../shared_types" }
serde_json = "1.0.140"
serde = { version = "1.0", features = ["derive"] }
regex = "1.11.1"
bincode = "2.0.1"
synoptic = "2.2.9"
brotli2 = "0.3.2"
rayon = "1.11.0"
