[package]
name = "internal_comptime"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", default-features = false, features = ["derive"] }
phf = { version = "0.13.1", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
shared_types = { path = "../shared_types" }
