[package]
name = "tutorlolv2_bench"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false

[dependencies]
anyhow = "1.0.100"
bytes = "1.10.1"
reqwest = "0.12.23"
tokio = { version = "1.47.1", features = ["full"] }
