[package]
name = "tutorlolv2_build"
version = "0.2.3"
edition = "2024"

[dependencies]
tutorlolv2_fmt = { workspace = true }
tutorlolv2_types = { workspace = true }

tokio = { version = "1.47", features = ["full"] }
serde_json = "1.0.143"
serde = { version = "1.0", features = ["derive"] }
regex = "1.11.2"
rayon = "1.11.0"
tokio-stream = { version = "0.1.17", features = ["fs"] }
