[package]
name = "tutorlolv2_build"
version = "0.2.4"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false

[dependencies]
tutorlolv2_fmt = { path = "../tutorlolv2_fmt" }
tutorlolv2_types = { path = "../tutorlolv2_types", features = ["dev"] }
tokio = { version = "1.47", features = ["full"] }
serde_json = "1.0.143"
serde = { version = "1.0", features = ["derive"] }
regex = "1.11.2"
rayon = "1.11.0"
tokio-stream = { version = "0.1.17", features = ["fs"] }
