[package]
name = "tutorlolv2_dev"
version = "0.1.0"
edition = "2024"

[dependencies]
tutorlolv2_generated = { path = "../tutorlolv2_generated" }
tutorlolv2_macros = { path = "../tutorlolv2_macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
once_cell = "1.21.3"
scraper = "0.24.0"
image = "0.25.8"
ravif = { version = "0.12.0", default-features = false }
regex = "1.11.2"
paste = "1.0.15"
tokio = { version = "1.47", default-features = false }
reqwest = { version = "0.12.1", features = [
    "json",
    "rustls-tls",
], default-features = false }
