[package]
name = "tutorlolv2_dev"
version = "0.1.2"
edition = "2024"

[dependencies]
tutorlolv2_gen = { path = "../tutorlolv2_gen" }
tutorlolv2_macros = { path = "../tutorlolv2_macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
once_cell = "1.21.3"
scraper = "0.24.0"
regex = "1.11.2"
paste = "1.0.15"
tokio = { version = "1.47", features = ["full"] }
reqwest = { version = "0.12.1", features = [
    "json",
    "rustls-tls",
], default-features = false }
