[package]
name = "tutorlolv2_dev"
version = "0.2.1"
edition = "2024"

[dependencies]
tutorlolv2_gen = { path = "../tutorlolv2_gen", features = ["dev", "eval"] }
tutorlolv2_macros = { path = "../tutorlolv2_macros" }
tutorlolv2_fmt = { path = "../tutorlolv2_fmt" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
once_cell = "1.21.3"
scraper = "0.25.0"
regex = "1.11.2"
paste = "1.0.15"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.12.1", features = ["json"] }
