[package]
name = "tutorlolv2_exports"
version = "0.1.0"
edition = "2024"

[dependencies]
tutorlolv2_types = { path = "../tutorlolv2_types" }
tutorlolv2_fmt = { path = "../tutorlolv2_fmt" }
tutorlolv2_gen = { path = "../tutorlolv2_gen" }
bincode = { version = "2.0.1", default-features = false, features = ["derive"] }
paste = "1.0.15"
serde = { version = "1.0.228", features = ["derive"] }
