[package]
name = "tutorlolv2_exports"
version = "0.1.0"
edition = "2024"

[dependencies]
tutorlolv2_types = { path = "../tutorlolv2_types" }
bincode = { version = "2.0.1", default-features = false, optional = true }
serde = { version = "1.0.228", default-features = false, optional = true }

[features]
default = []
bincode = ["dep:bincode", "bincode/derive"]
serde = ["dep:serde", "serde/derive"]
