[package]
name = "tutorlolv2_gen"
version = "0.1.3"
edition = "2024"
publish = false

[dependencies]
tutorlolv2_types = { path = "../tutorlolv2_types", default-features = false }
const_sized_bit_set = { version = "0.3.0", optional = true }
phf = { version = "0.13.1", default-features = false, optional = true }
bincode = { version = "2.0.1", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, optional = true }
pastey = "0.2.1"

[features]
default = []
bincode = ["dep:bincode", "bincode/derive"]
serde = ["dep:serde", "serde/derive"]
dev = ["tutorlolv2_types/dev"]
glob = []
eval = ["dep:phf", "phf/macros", "dep:const_sized_bit_set"]
