[package]
name = "tutorlolv2_html"
version = "0.1.0"
edition = "2024"

[dependencies]
pastey = "0.2.1"
tokio = { version = "1.49.0", features = ["full"] }
tutorlolv2_gen = { path = "../tutorlolv2_gen", features = [
    "dev",
    "eval",
    "glob",
] }
tutorlolv2_fmt = { path = "../tutorlolv2_fmt" }
