[package]
name = "tutorlolv2_math"
version = "0.2.1"
edition = "2024"

[dependencies]
tutorlolv2_types = { workspace = true }
tutorlolv2_gen = { workspace = true }
bincode = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
const_sized_bit_set = "0.3.0"

[dev-dependencies]
serde_json = "1.0.145"
