[package]
name = "tutorlolv2_model"
version = "0.1.0"
edition = "2024"

[dependencies]
tutorlolv2_gen = { path = "../tutorlolv2_gen", default-features = false }
bincode = { version = "2.0.1", default-features = false, features = [
    "derive",
    "alloc",
] }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_arrays = { version = "0.2.0", default-features = false }

[features]
default = []
recv = []
send = []
