[package]
name = "tutorlolv2_server"
version = "0.1.2"
edition = "2024"

[dependencies]
tutorlolv2_math = { workspace = true }
tutorlolv2_gen = { workspace = true }

paste = "1.0.15"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
], default-features = false }
dotenvy = "0.15.7"
uuid = { version = "1.18.1", default-features = false, features = ["v4"] }
rand = { version = "0.9.2", default-features = false }
bincode = "2.0.1"
rust-embed = { version = "8.7.2", default-features = false }
actix-web = { version = "4.11.0", default-features = false, features = [
    "http2",
    "macros",
] }
actix-files = "0.6.8"
actix-cors = "0.7.1"
serde_json = "1.0.145"

tutorlolv2_dev = { workspace = true, optional = true }
tutorlolv2_avif = { workspace = true, optional = true }
tutorlolv2_exports = { workspace = true, optional = true }
reqwest = { version = "0.12.1", features = [
    "json",
    "rustls-tls",
], default-features = false, optional = true }
tokio = { version = "1.48.0", features = ["full"] }

[features]
dev = ["tutorlolv2_dev", "tutorlolv2_avif", "tutorlolv2_exports", "reqwest"]
default = ["dev"]
