[package]
name = "tutorlolv2_server"
version = "0.1.3"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false

[dependencies]
tutorlolv2 = { path = "../" }
pastey = "0.2.1"
# sqlx = { version = "0.8.6", features = [
#     "runtime-tokio-rustls",
#     "postgres",
#     "macros",
# ], default-features = false }
dotenvy = "0.15.7"
rand = "0.10.0"
bincode = "2.0.1"
tokio = { version = "1.51.0", features = ["full"] }
rust-embed = { version = "8.7.2", default-features = false }
actix-web = { version = "4.13.0", default-features = false, features = [
    "http2",
    "macros",
] }
actix-cors = "0.7.1"
serde_json = "1.0.149"
actix-files = "0.6.10"
tutorlolv2_html = { path = "../tutorlolv2_html", optional = true }
tutorlolv2_dev = { path = "../tutorlolv2_dev", optional = true }
tutorlolv2_avif = { path = "../tutorlolv2_avif", optional = true }

[features]
dev = ["tutorlolv2_dev", "tutorlolv2_html"]
avif = ["dev", "tutorlolv2_avif"]
default = ["dev"]
