[package]
name = "tutorlolv2_types"
version = "0.1.1"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", default-features = false, features = ["derive"] }
paste = { version = "1.0.15", optional = true }
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["dev"]
dev = ["paste"]
