[package]
name = "tutorlolv2_types"
version = "0.1.2"
edition = "2024"

[dependencies]
paste = { version = "1.0.15" }

bincode = { version = "2.0.1", default-features = false, features = [
    "derive",
], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
bincode = ["dep:bincode"]
serde = ["dep:serde"]
dev = []
