[package]
name = "tutorlolv2_wiki"
version = "0.1.0"
edition = "2024"

[dependencies]
tutorlolv2_types = { path = "../tutorlolv2_types" }
flate2 = "1.1.9"
mlua = { version = "0.11.6", features = [
    "async",
    "lua54",
    "serde",
    "vendored",
] }
rayon = "1.12.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["cookies", "gzip"] }
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
